<resources>

    <!--    Conter Strings-->

    <string name="btmPlus" translatable="false">+</string>
    <string name="btmMinus" translatable="false">-</string>
    <string name="btmReset">Reset</string>
    <string name="checkBoxAllow">Allow negative number</string>
    <string name="btmSet">Set your number</string>
    <string name="defaultValue">Enter default value</string>
    <string name="countByPair">Count by pair</string>


    <string name="app_name">My Application</string>

    <string name="userLoginText" translatable="false">login</string>
    <string name="userPasswordText">Password</string>
    <string name="userLoginBtmText">Sign in</string>
    <string name="userLoginErrorText">Incorrect</string>


<!--    activity Main-->
    <string name="userWelcomeText">Welcome</string>
    <string name="counterActBtmText">Counter</string>
    <string name="imageActBtmText">Image</string>
    <string name="intenseActBtmText">Intense</string>
    <string name="searchActBtmText">Search</string>
    <string name="mainListUsers">Look list of users</string>



<!--    Phone Activity-->

    <string name="phoneCallText">call to number</string>
    <string name="phoneCallBtm">call</string>

    <string name="phoneMapText">Look in maps</string>
    <string name="phoneMapBtm" translatable="false">Google Maps</string>

    <string name="phoneGoogleText">Look in google</string>
    <string name="phoneGoogleBtm" translatable="false">Google</string>



</resources>